--- a/templates/idea_entry.html
+++ b/templates/idea_entry.html
@@ -7,8 +7,13 @@
 
 	<!-- left column -->
 	<div class="span12">
-		<h2>IDEA: {{ idea.title }}</h2>
+		<h2>Item: {{ idea.title }}</h2>
 		<p>By {{ idea.creator }}</p>
+
+		<img src="http://placehold.it/360x270" alt="">
+
+
+		
 		<hr>
 		<p>{{ idea.idea }}</p>
 		<p>
@@ -19,7 +24,10 @@
 			</ul>
 		</p>
 
+
+
 		<p>added: {{ idea.timestamp }} | id: {{ idea.id }}</p>
+
 		
 		<hr>
 
