--- a/templates/main.html
+++ b/templates/main.html
@@ -5,84 +5,66 @@
 {% block body %}
 
 
-<!-- Search -->
-    <!--<div class="row-fluid">
-        <div class="span12">
+<div class="row">
 
-                <form class="navbar-search"><img src="{{ url_for('static', filename='img/search-icon.png') }}" alt="" height="40px" width="40px"><input type="text" class="search-query" placeholder="Search"></form>
-           
-        </div>
-    </div>-->
+	<!-- left column -->
+	<div class="span6">
+		<h3>Submitted Ideas</h3>
 
-<!-- About -->
-   <!-- <div class="row-fluid">
-      <div class="span12">
-          <h1>your wishlist</h1>
-          <p>'share your wishlist.'</p>
-      </div>
-    </div> -->
+		{% for idea in ideas %}
+			<h4><a href="/ideas/{{ idea.slug }}">{{ idea.title }}</a></h4>
+			<p>by {{ idea.creator }}</p>
+			<p>
+			{% for cat in idea.categories %}
+				<span class="label label-inverse"><a href="/category/{{ cat}}">{{ cat|replace("_"," ")}}</a></span>
+			{% endfor %}
+			<a class="label" href="/ideas/{{ idea.slug }}/edit">edit</a>
+			</p>
+			
+			<hr/>
+		{% endfor %}
+		
+	</div>
 
-
-<div class="row-fluid">
-
-<div class="span6">
-
-			<legend><h3>Share Your Wish Item</h3></legend>
-		</div>
-
-<div class="span6">
-
-                <!--<form class="navbar-search"><img src="{{ url_for('static', filename='img/search-icon.png') }}" alt="" height="40px" width="40px"><input type="text" class="search-query" placeholder="Search"></form>-->
-
-  <form class="form-search">
-  	<img src="{{ url_for('static', filename='img/search-icon.png') }}" alt="" height="40px" width="40px">
-  <div class="input-append">
-    <input type="text" class="span6 search-query">
-    <button type="submit" class="btn">Search</button>
-  </div>
-  
-</form>
-           
-        </div>
-
-</div>
-
-
-<div class="row-fluid">
-
-<div class="span6">
+	<div class="span6">
+		
 
 		<form method="POST" action="/">
+			<legend><h3>Share Your Ideas</h3></legend>
 
-			<!--<legend><h3>Share Your Wish Item</h3></legend>-->
-			
+			{% if form.errors %}
+
+			    <ul class="errors">
+			        {% for field_name, field_errors in form.errors|dictsort if field_errors %}
+			            {% for error in field_errors %}
+			                <li class="alert">{{ form[field_name].label }}: {{ error }}</li>
+			            {% endfor %}
+			        {% endfor %}
+			    </ul>
+			{% endif %}
 
 			{{ form.creator.label(class='myLabelCssClass') }}
-			{{ form.creator(class='myTextboxCssClass', type='textarea') }}
-			{{ render_error(form.creator) }}  {# render_error inside _form_helpers.html #}
+			{{ form.creator(class='myTextboxCssClass') }}
+			
 			<!--
 			<label for="creator">First Name</label>
 			<input type="text" id="creator" name="creator" value="{{ form.creator }}">
 			-->
 			
 			{{ form.title.label(class='myLabelCssClass') }}
-			{{ form.title(class='myTextboxCssClass', type='textarea') }}
-			{{ render_error(form.title) }}  {# render_error inside _form_helpers.html #}
+			{{ form.title(class='myTextboxCssClass') }}
+			
 			<!--
 			<label for="title">Project Title</label>
 			<input type="text" id="title" name="title">
 			-->
 			{{ form.idea.label }}
 			{{ render_textarea(form.idea, cols="50", rows="6") }} {# render_textarea inside _form_helpers.html #}
-			{{ render_error(form.idea) }} {# render_error inside _form_helpers.html #}
-
-		</div>
-
-
-<div class="span6">
 			
+
+			<br>
 			<label>Category</label>
-			<span class="help-block">Please Pick Your Item Catagory.</span>
+			<span class="help-block">Select as many as you need.</span>
 
 			
 			{# comment - loop through categories and create checkboxes #}
@@ -93,61 +75,12 @@
 			{% endfor %}
 
 
-			<button type="submit" class="btn btn-primary">Submit</button>
+			<button type="submit" class="btn btn-primary">Add Idea</button>
 		</form>
 	</div>
-</div>
-
-
-
-
-
-
-
-
-
-
-<div class="row">
-
-	<!-- left column -->
-	<div class="span3">
-		<h3>Your Wish Item List</h3>
-		
-
-
-  <div class="container">
-      	<div class="row-fluid">
-            <ul class="thumbnails">
-
 
 	
-		{% for idea in ideas %}
 
-		<li class="span3">
-			<div class="thumbnail">
-				<div class="caption">
-
-					 <img src="http://placehold.it/260x120" alt="">
-
-			<h4><a href="/ideas/{{ idea.slug }}">{{ idea.title }}</a></h4>
-			<p>by {{ idea.creator }}</p>
-			
-
-			<p>
-			{% for cat in idea.categories %}
-				<span class="label label-inverse"><a href="/category/{{ cat}}">{{ cat|replace("_"," ")}}</a></span>
-			</p>
-			
-			{% endfor %}
-			<hr/>
-
-		{% endfor %}
-
-		</div>
-</div>
-</li>
-</ul>
-</div>
 </div>
 
 {% endblock %}
