--- a/templates/main.html
+++ b/templates/main.html
@@ -63,6 +63,11 @@
 			
 
 			<br>
+
+
+			
+<div class="span6">
+
 			<label>Category</label>
 			<span class="help-block">Pick Your Item Category</span>
 
