--- a/templates/main.html
+++ b/templates/main.html
@@ -61,11 +61,11 @@
 			{{ form.idea.label }}
 			{{ render_textarea(form.idea, cols="50", rows="6") }} {# render_textarea inside _form_helpers.html #}
 			
-
+</div>
 			<br>
 
 
-			
+
 <div class="span6">
 
 			<label>Category</label>
@@ -83,6 +83,7 @@
 			<button type="submit" class="btn btn-primary">Add Idea</button>
 		</form>
 	</div>
+</div>
 
 	
 
