--- a/templates/layout/main.html
+++ b/templates/layout/main.html
@@ -35,7 +35,7 @@
 
             <hr/>
             <footer>
-                <p><a href="http://itppyweb.herokuapp.com">ITP DWD Fall D.I 2012</a>
+                <p><a href="">ITP DWD Fall D.I 2012</a>
                </p>
             </footer>
 
