--- a/templates/main.html
+++ b/templates/main.html
@@ -80,12 +80,12 @@
 			{% endfor %}
 
 
-			<button type="submit" class="btn btn-primary">Add Idea</button>
+			<button type="submit" class="btn btn-primary">Submit</button>
 		</form>
 	</div>
 </div>
 
-</div>
+
 
 
 
