--- a/templates/main.html
+++ b/templates/main.html
@@ -32,6 +32,25 @@
 		<form method="POST" action="/">
 			<legend><h3>Share Your Wish Item</h3></legend>
 
+			{% for idea in ideas %}
+			<h4><a href="/ideas/{{ idea.slug }}">{{ idea.title }}</a></h4>
+			<p>by {{ idea.creator }}</p>
+			<p>
+			{% for cat in idea.categories %}
+				<span class="label label-inverse"><a href="/category/{{ cat}}">{{ cat|replace("_"," ")}}</a></span>
+			{% endfor %}
+			<a class="label" href="/ideas/{{ idea.slug }}/edit">edit</a>
+			</p>
+			
+			<hr/>
+		{% endfor %}
+
+
+
+
+
+
+
 			{% if form.errors %}
 
 			    <ul class="errors">
