--- a/templates/idea_edit.html
+++ b/templates/idea_edit.html
@@ -7,7 +7,7 @@
 	<div class="span6">
 
 		<form method="POST" action="/ideas/{{ idea.slug }}/edit">
-			<legend><h3>Edit Idea</h3></legend>
+			<legend><h3>Edit Item</h3></legend>
 
 			{% if form.errors %}
 			    <ul class="errors">
@@ -52,7 +52,7 @@
 			{% endfor %}
 
 
-			<button type="submit" class="btn btn-primary">Update Idea</button>
+			<button type="submit" class="btn btn-primary">Update Item</button>
 		</form>
 	</div>
 
