--- a/templates/idea_entry.html
+++ b/templates/idea_entry.html
@@ -7,7 +7,7 @@
 
 	<!-- left column -->
 	<div class="span12">
-		<h2>IDEA: {{ idea.title }}</h2>
+		<h2>Item: {{ idea.title }}</h2>
 		<p>By {{ idea.creator }}</p>
 		<hr>
 		<p>{{ idea.idea }}</p>
