--- a/templates/main.html
+++ b/templates/main.html
@@ -32,6 +32,35 @@
 		<form method="POST" action="/">
 			<legend><h3>Share Your Wish Item</h3></legend>
 
+		</div>
+
+
+<div class="span6">
+
+                <!--<form class="navbar-search"><img src="{{ url_for('static', filename='img/search-icon.png') }}" alt="" height="40px" width="40px"><input type="text" class="search-query" placeholder="Search"></form>-->
+
+  <form class="form-search">
+  	<img src="{{ url_for('static', filename='img/search-icon.png') }}" alt="" height="40px" width="40px">
+  <form class="navbar-form pull-right" action="/search">
+              <input class="span2" type="text" placeholder="Search" name="query" id="query">
+              <button type="submit" class="btn">search</button>
+  </div>
+  
+</form>
+
+
+
+  
+
+
+
+           
+        </div>
+
+
+
+
+
 
 			{% if form.errors %}
 
