--- a/templates/main.html
+++ b/templates/main.html
@@ -49,18 +49,13 @@
 </form>
 
 
-
-  
-
-
-
            
         </div>
 
 
+<div class="row-fluid">
 
-
-
+<div class="span6">
 
 			{% if form.errors %}
 
