--- a/templates/main.html
+++ b/templates/main.html
@@ -124,6 +124,28 @@
 			{% endfor %}
 			<a class="label" href="/ideas/{{ idea.slug }}/edit">edit</a>
 			</p>
+
+
+
+			
+
+
+
+			<div class="span3">
+
+			<form method="POST" action="/prompt/mitt-romney-pizza-toppping">
+				<div class="btn-group" style="float:left;">
+				<button type="submit" name="do" value="like" class="btn btn-mini" style="margin-right: 8px;">
+				</div>
+			</div>
+
+
+
+
+
+
+
+
 			
 			<hr/>
 
