--- a/templates/main.html
+++ b/templates/main.html
@@ -131,14 +131,11 @@
 
 
 
-			<div class="span3">
+			<<div class="span3">
 
 			<form method="POST" action="/prompt/mitt-romney-pizza-toppping">
 				<div class="btn-group" style="float:left;">
-				<button type="submit" name="do" value="like" class="btn btn-mini" style="margin-right: 8px;">
-				</div>
-			</div>
-
+				<button type="submit" name="do" value="like" class="btn btn-mini" style="margin-right: 8px;"><i class="icon-thumbs-up"></i></button>
 </div>
 
 
