--- a/templates/main.html
+++ b/templates/main.html
@@ -133,17 +133,13 @@
 
 			<<div class="span3">
 
-			<form method="POST" action="/prompt/mitt-romney-pizza-toppping">
+			<form method="POST" action="/">
 				<div class="btn-group" style="float:left;">
 				<button type="submit" name="do" value="like" class="btn btn-mini" style="margin-right: 8px;"><i class="icon-thumbs-up"></i></button>
-</div>
 
 
 
 
-
-
-			
 			<hr/>
 
 		{% endfor %}
