--- a/templates/main.html
+++ b/templates/main.html
@@ -126,7 +126,7 @@
 			</p>
 
 
-
+			{% endfor %}
 			<form method="POST" action="/">
 				<div class="btn-group" style="float:left;">
 				<button type="submit" name="do" value="like" class="btn btn-mini" style="margin-right: 8px;"><i class="icon-thumbs-up"></i></button>
