--- a/templates/main.html
+++ b/templates/main.html
@@ -126,16 +126,16 @@
 			</p>
 
 
-			<form method="POST" action="/prompt/mitt-romney-pizza-toppping">
+			<form method="POST" action="/">
 				<div class="btn-group" style="float:left;">
 				<button type="submit" name="do" value="like" class="btn btn-mini" style="margin-right: 8px;"><i class="icon-thumbs-up"></i></button><!--<button type="submit" name="do" value="dislike" class="btn btn-mini" style="margin-right: 8px;"><i class="icon-thumbs-down"></i></button>-->
 				</div><input type="hidden" name="id" value="507ac1f6dd591900079e9240">
-				<input type="hidden" name="response" value="baloney">
-					<p style="float:left;"> baloney
+				<input type="hidden" name="response" value="LOVE">
+					<p style="float:left;"> LOVE
 			<!--<i class="icon-thumbs-up"></i> 10</p>-->
 		</form>
 		</div>
-			
+
 
 		{% endfor %}
 
