--- a/templates/main.html
+++ b/templates/main.html
@@ -125,9 +125,9 @@
 			<a class="label" href="/ideas/{{ idea.slug }}/edit">edit</a>
 			<!--</p>-->
 
-			{% endfor %}
 			<form method="POST" action="/">
-				<div class="btn-group" style="float:left;">
+				<!--<div class="btn-group" style="float:left;">-->
+				<div class="btn-group" style="">
 				<button type="submit" name="do" value="like" class="btn btn-mini" style="margin-right: 8px;"><i class="icon-heart"></i></button><!--<button type="submit" name="do" value="dislike" class="btn btn-mini" style="margin-right: 8px;"><i class="icon-thumbs-down"></i></button>-->
 				</div><input type="hidden" name="id" value="507ac1f6dd591900079e9240">
 				<input type="hidden" name="response" value="LOVE">
