--- a/templates/main.html
+++ b/templates/main.html
@@ -108,7 +108,7 @@
 
 		<li class="span3">
 			<div class="thumbnail">
-				<div class="caption">
+				<!--<div class="caption">-->
 
 					 <img src="http://placehold.it/260x120" alt="">
 
@@ -139,10 +139,7 @@
 		{% endfor %}
 
 
-
-
-
-		</div>
+<!--</div>-->
 </div>
 </li>
 </ul>
