--- a/templates/idea_entry.html
+++ b/templates/idea_entry.html
@@ -9,6 +9,13 @@
 	<div class="span12">
 		<h2>Item: {{ idea.title }}</h2>
 		<p>By {{ idea.creator }}</p>
+
+
+		<img src="http://placehold.it/360x270" alt="">
+
+
+
+		
 		<hr>
 		<p>{{ idea.idea }}</p>
 		<p>
