--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -922,7 +922,8 @@ legend {
   line-height: 40px;
   color: #333333;
   border: 0;
-  border-bottom: 1px solid #e5e5e5;
+  /*border-bottom: 1px solid #e5e5e5;*/
+  border-bottom: 1px solid #ffc0cb;
 }
 
 legend small {
