--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -162,7 +162,8 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 20px;
-  color: #333333;
+  /*color: #333333*/
+  color: #ffc0cb;
   background-color: #ffffff;
 }
 
