--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5,9 +5,104 @@
    ========================================================================== */
 
 
-span.label a {
+/*span.label a {
 	color:#fff;
+}*/
+
+
+
+/* ==========================================================================
+   Author's custom styles
+   ========================================================================== */
+
+@font-face {
+font-family: ApexBold;
+src: url('/static/fonts/ApexNew-Bold.otf');
+} 
+
+@font-face {
+font-family: ApexBook;
+src: url('/static/fonts/ApexNew-Book.otf');
+} 
+
+@font-face {
+font-family: Apex;
+src: url('/static/fonts/ApexNew-Medium.otf');
+} 
+
+body{
+	background-image:url('/static/img/cork.png');	
+	font-family: Apex;
 }
+
+#container{
+	width:1000px;
+	margin: 0 auto;
+}
+
+.subtitle{
+	font-family: ApexBook;
+	color: #cc3232;
+	font-size: 1.7em;
+}
+
+.board{
+font-size: 1em;
+text-transform: uppercase;
+}
+
+.item{
+margin-right: 50px;
+}
+
+.posttitles{
+font-family: ApexBold;
+color: #663300;
+}
+
+table{
+text-align:left;
+}
+
+.info{
+font-size:.9em;
+color: black;
+}
+
+.infoone{
+font-size:.9em;
+color: #cc3232;
+}
+
+a{
+font-size:.7em;
+color: black;
+}
+
+a:hover{
+font-size:.7em;
+color: #cc3232;
+text-decoration:none;
+}
+
+.join{
+font-size:.8em;
+color: #cc3232;
+}
+
+td, th{
+padding-right: 20px;
+}
+
+th{
+color: #663300;
+padding-bottom: 10px;
+}
+
+hr{
+border: 0; border-top: 1px solid black;
+}
+
 
 
 
