--- a/static/css/main.css
+++ b/static/css/main.css
@@ -76,7 +76,7 @@ color: #cc3232;
 
 a{
 font-size:.7em;
-color: black;
+color: #ffc0cb;
 }
 
 a:hover{
@@ -87,7 +87,7 @@ text-decoration:none;
 
 .join{
 font-size:.8em;
-color: #cc3232;
+color: #ffc0cb;
 }
 
 td, th{
