--- a/static/css/main.css
+++ b/static/css/main.css
@@ -30,6 +30,11 @@ font-family: Apex;
 src: url('/static/fonts/ApexNew-Medium.otf');
 } */
 
+.pageheader{
+	background-image:url('/static/img/wishlist.png');	
+	font-family: Apex;
+}
+
 body{
 	background-image:url('/static/img/cork.png');	
 	font-family: Apex;
