--- a/templates/layout/main.html
+++ b/templates/layout/main.html
@@ -24,7 +24,7 @@
         <div class="container">
 
             <h1 class="pageheader">
-                <a href="url('/static/img/wishlist.png')">WishList</a>
+                <a href="/"> <img src="{{ url_for('static', filename='img/wishlist.png') }}"> WishList</a>
             </h1>
 
             <hr>
