--- a/templates/layout/main.html
+++ b/templates/layout/main.html
@@ -24,7 +24,7 @@
         <div class="container">
 
             <h1 class="pageheader">
-                <a href="/"> <img src="{{url_for('static', filename='img/wishlist.png')}}" alt="" height="40px" width="50px"></a>
+                <a href="/"> <img src="{{url_for('static', filename='img/wishlist.jpg')}}" alt="" height="40px" width="50px"></a>
             </h1>
 
             <hr>
