--- a/templates/layout/main.html
+++ b/templates/layout/main.html
@@ -24,7 +24,7 @@
         <div class="container">
 
             <h1 class="pageheader">
-                <a href="/"> <img src="{{url_for('static', filename='img/wishlist.jpg')}}"></img></a>
+                <a href="/"> <img src="url('/static/wishlist.jpg')"></img></a>
             </h1>
 
             <hr>
