--- a/static/css/main.css
+++ b/static/css/main.css
@@ -75,7 +75,7 @@ color: #ffc0cb;
 
 a:hover{
 font-size:.7em;
-color: #cc3232;
+color: #ffc0cb;
 text-decoration:none;
 }
 
@@ -98,7 +98,7 @@ border: 0; border-top: 1px solid black;
 }
 
 .btn-group{
-color: #cc3232;
+color: #ffc0cb;
 
 }
 
