--- a/templates/layout/main.html
+++ b/templates/layout/main.html
@@ -24,7 +24,7 @@
         <div class="container">
 
             <h1 class="pageheader">
-                <a href="/"> <img src="{{ url_for('static', filename='img/wishlist.png') }}"></a>
+                <a href="/"> <img src="{{ url_for('static', filename='img/wishlist.png') }}" width= "150" height = "50"></a>
             </h1>
 
             <hr>
