--- a/static/css/main.css
+++ b/static/css/main.css
@@ -36,8 +36,8 @@ src: url('/static/fonts/ApexNew-Medium.otf');
 
 body{
 	font-family: ApexBook;
-	color: #cc3232;
-	font-size: 1.7em;
+	color: #c4bcbc;
+	font-size: 1em;
 }
 
 
