--- a/templates/main.html
+++ b/templates/main.html
@@ -81,7 +81,7 @@
 			{% endfor %}
 
 
-			<button type="submit" class="btn btn-primary">Submit</button>
+			<button type="submit" class="btn btn">Submit</button>
 		</form>
 	</div>
 </div>
@@ -124,7 +124,7 @@
 			
 			{% endfor %}
 
-			
+
 			<a class="label" href="/ideas/{{ idea.slug }}/edit">edit</a>
 			<!--</p>-->
 
