--- a/static/css/main.css
+++ b/static/css/main.css
@@ -47,12 +47,12 @@ color: #000000;
 
 a{
 font-size:.7em;
-color: #209fd9;
+color: #ffc0cb;
 }
 
 a:hover{
 font-size:.7em;
-color: #209fd9;
+color: #ffc0cb;
 text-decoration:none;
 }
 
