--- a/templates/layout/main.html
+++ b/templates/layout/main.html
@@ -25,7 +25,7 @@
 
             <h1 class="pageheader">
                 <a href="/"> 
-                    <img src="{{ url_for('static', filename='img/wishlist.png') }}" width= "150" height = "50">
+                    <img src="{{ url_for('static', filename='img/wishlist.png') }}" width= "200" height = "100">
                 </a>
             </h1>
 
@@ -37,7 +37,7 @@
 
             <hr/>
             <footer>
-                <p><a href=""><img src="{{ url_for('static', filename='img/wishlist.png') }}">ITP DWD Fall D.I 2012</a>
+                <p><a href=""><img src="{{ url_for('static', filename='img/wishlist.png') }}"width= "150" height = "50">ITP DWD Fall D.I 2012</a>
                </p>
             </footer>
 
