--- a/static/css/main.css
+++ b/static/css/main.css
@@ -36,7 +36,7 @@ src: url('/static/fonts/ApexNew-Medium.otf');
 
 body{
 	font-family: ApexBook;
-	color: #c4bcbc;
+	color:  #7b7c7d;
 	font-size: 1em;
 }
 
