--- a/templates/idea_entry.html
+++ b/templates/idea_entry.html
@@ -55,7 +55,7 @@
 					<textarea cols="50" rows="6" id="comment" name="comment"></textarea>
 					
 					<label>
-					<button type="submit" class="btn btn-success">Comment</button>
+					<button type="submit" class="btn btn">Comment</button>
 					</label>
 				</form>
 			</div>
