--- a/static/css/main.css
+++ b/static/css/main.css
@@ -47,18 +47,18 @@ color: #000000;
 
 a{
 font-size:.7em;
-color: #ffc0cb;
+color: #d46108;
 }
 
 a:hover{
 font-size:.7em;
-color: #ffc0cb;
+color: #d46108;
 text-decoration:none;
 }
 
 footer{
 font-size:1em;
-color: #ffc0cb;
+color: #d46108;
 }
 
 
