--- a/static/css/main.css
+++ b/static/css/main.css
@@ -47,18 +47,18 @@ color: #000000;
 
 a{
 font-size:.7em;
-color: #d46108;
+color: #e86fc2;
 }
 
 a:hover{
 font-size:.7em;
-color: #d46108;
+color: #e86fc2;
 text-decoration:none;
 }
 
 footer{
-font-size:2em;
-color: #d46108;
+font-size:1em;
+color: #e86fc2;
 }
 
 
