--- a/static/css/main.css
+++ b/static/css/main.css
@@ -35,7 +35,7 @@ src: url('/static/fonts/ApexNew-Medium.otf');
 
 
 body{
-	font-family: ApexBook;
+	font-family: Archer;
 	color:  #7b7c7d;
 	font-size: 1em;
 }
