--- a/templates/idea_entry.html
+++ b/templates/idea_entry.html
@@ -11,7 +11,8 @@
 		<p>By {{ idea.creator }}</p>
 
 
-		<img src="http://placehold.it/360x270" alt="">
+		<!--<img src="http://placehold.it/360x270" alt="">-->
+		 <img src="{{ url_for('static', filename='img/360x270.gif') }}" width= "360" height = "270">
 
 
 
