--- a/templates/layout/main.html
+++ b/templates/layout/main.html
@@ -37,7 +37,7 @@
 
             <hr/>
             <footer>
-                <p><a href=""><img src="{{ url_for('static', filename='img/wishlist.png') }}"width= "150" height = "10">ITP DWD Fall D.I 2012</a>
+                <p><a href="">ITP Fall D.I Shin 2012</a>
                </p>
             </footer>
 
