--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -924,7 +924,7 @@ legend {
   color: #333333;
   border: 0;
   /*border-bottom: 1px solid #e5e5e5;*/
-  border-bottom: 1px solid #0777b8;
+  border-bottom: 1px solid  #e843e3;
 }
 
 legend small {
